--- a/index.html
+++ b/index.html
@@ -3,29 +3,87 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Document</title>
   </head>
   <body>
-    <header class="debug">
-      <div class="header-logo">Header Logo</div>
-      <ul class="header-links">
-        <li><a href="https://google.com">header link-one</a></li>
-        <li><a href="https://google.com">header link-two</a></li>
-        <li><a href="https://google.com">header link-three</a></li>
-      </ul>
+    <header class="">
+      <div class="header-container">
+        <div class="header-logo">Header Logo</div>
+        <ul class="header-links">
+          <li><a href="https://google.com">header link-one</a></li>
+          <li><a href="https://google.com">header link-two</a></li>
+          <li><a href="https://google.com">header link-three</a></li>
+        </ul>
+      </div>
     </header>
     <main>
-      <section class="debug first-section">
-        <div class="container">
-          <div class="debug">This website is awesome</div>
-          <div class="debug">Image placeholder</div>
+      <section class="hero-section">
+        <div class="hero-text-container">
+          <div class="hero-text items">
+            <h1>This website is awesome</h1>
+            <p>
+              This website has some subtext that goes here under the main title.
+              It's a smaller font and the color is lower contrast
+            </p>
+            <button class="signup-button">Sign up</button>
+          </div>
+          <div class="image-placeholder items">
+            this is a placeholder for an image
+          </div>
         </div>
       </section>
-      <section class="debug"></section>
-      <section class="debug"></section>
-      <section class="debug"></section>
+      <section class="info-section">
+        <div class="info-container">
+          <h2 class="information-header">Some Random information.</h2>
+          <div class="info-boxes">
+            <div class="info">
+              <div class="info-box"></div>
+              <div class="info-text">
+                this is some subtext under an illustration or image
+              </div>
+            </div>
+            <div class="info">
+              <div class="info-box"></div>
+              <div class="info-text">
+                this is some subtext under an illustration or image
+              </div>
+            </div>
+            <div class="info">
+              <div class="info-box"></div>
+              <div class="info-text">
+                this is some subtext under an illustration or image
+              </div>
+            </div>
+            <div class="info">
+              <div class="info-box"></div>
+              <div class="info-text">
+                this is some subtext under an illustration or image
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="quote-section">
+        <div class="quote-container">
+          <div class="quote-text">
+            This is an inspiring quote, or a testimonial from a customer. Maybe
+            it's just filling up space, or maybe people will actually read it.
+            Who knows? All i know is that it looks nice.
+          </div>
+          <div class="author-container">
+            <div class="author">-Thor, God of Thunder</div>
+          </div>
+        </div>
+      </section>
+      <section class=""></section>
     </main>
-    <footer class="debug">Copyright text</footer>
+    <footer class="">Copyright text</footer>
   </body>
 </html>
