Finish the styling

--- a/index.html
+++ b/index.html
@@ -82,7 +82,19 @@
           </div>
         </div>
       </section>
-      <section class=""></section>
+      <section class="action-section">
+        <div class="action-container">
+          <div class="action-phrase">
+            <h1>Call to action! It's time!</h1>
+            <p>
+              Sign up for our product by clicking that button right over there!
+            </p>
+          </div>
+          <div class="action-button-container">
+            <button class="action-button">Sign Up</button>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="">Copyright text</footer>
   </body>
